UI Updates, fixed flickering background.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 html, body {
   background: #131313;
-  height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 #root {
   background-color:rgba(109, 109, 109, 0.56);
@@ -9,8 +8,7 @@ html, body {
 .App, #root {
   text-align: center;
   color: #FFF;
-  height: 100%;
-  overflow: hidden;
+  height: 100vh;
 }
 .App-link {
   color: #61dafb;
@@ -28,7 +26,7 @@ html, body {
   font-family: 'Spotify-Black';
   padding-top: 1.2rem;
   font-size: 1.5rem;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 1em;
   filter: drop-shadow(0px 4px 2px rgba(20,20,20,0.8));
@@ -57,7 +55,7 @@ html, body {
   border-bottom: rgba(0, 0, 0, 0.19) 0.1em solid;
   background-color: rgba(140, 140, 140, 0.05);
 }
-.vinyl {
+.vinyl-old {
   margin: -2em 0 -2em 0;
   border-radius: 50%;
   padding: 0.7em;
@@ -69,17 +67,94 @@ html, body {
   mask-image: radial-gradient(.5em at 50% 50% , #00000000 99%, black 100%);
   background-color: #00000038;
   filter: drop-shadow(0px 0px 60px rgba(30,30,30,0.3));
+  filter: opacity(0.2);
+  border-top-left-radius: 1.5em;
+  border-bottom-left-radius: 1.5em;
+}
+.image-container {
+  height: inherit;
+  position: relative;
+  width: fit-content;
+  margin: -1px -1px 0px 0px;
+}
+.vinyl {
+  height: inherit;
+  filter: opacity(0.8);
+  border-top-left-radius: 1.5em;
+  border-bottom-left-radius: 1.5em;
+  object-fit: cover;
+}
+.image-shadow {
+  height: inherit;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top-left-radius: 1.5em;
+  border-bottom-left-radius: 1.5em;
+  background: linear-gradient(rgb(70 70 70 / 50%) 0%, rgb(0 0 0/ 0%) 30%,rgb(4 4 4 / 2%) 74%,rgb(10 10 10 / 34%) 90%, rgb(5 5 5 / 70%) 100%), linear-gradient(90deg, rgb(56 56 56 / 30%) 0%, rgb(0 0 0 / 0%) 30%, transparent);
 }
 .trackInfo {
   position: absolute;
   left: 35%;
   top: 2.6em;
 }
+.light-text {
+  color: #8e8e8e38 !important;
+}
+::-webkit-scrollbar {
+  width: 2px;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(50, 50, 50, 0.2);
+  border-radius: 5px;
+}
 
 .control-buttons {
   display: flow-root;
   position: relative;
   vertical-align: middle;
+}
+.suggestions-container, .track-info-container {
+  border-radius: 1.5em;
+  box-shadow: 0px 1px 4px 0px rgba(0,0,0,.05), inset 0px -20px 20px 0px rgba(0, 0, 0, 0.1), inset 0px -20px 20px 0px rgba(0, 0, 0, 0.15), inset 0px 20px 20px 0px rgba(255, 255, 255, 0.01);
+  border-top: rgba(160, 160, 160, 0.03) 0.1em solid;
+  border-bottom: rgba(0, 0, 0, 0.19) 0.1em solid;
+  background-color: rgba(140, 140, 140, 0.05);
+  padding-left: 2.5em;
+  padding-right: 2.5em;
+  padding-bottom: 2em;
+  padding-top: 1em;
+}
+
+.suggested-tracks-container {
+  height: 14.4em;
+  overflow: hidden auto;
+}
+
+.track-suggestion {
+  margin: 0.6em;
+  border-radius: 1.0em;
+  box-shadow: inset 0px -4px 9px 0px rgb(134 134 134 / 3%), inset 0px 4px 11px 4px rgb(0 0 0 / 19%);
+  background-color: rgb(25 25 25 / 3%);
+}
+
+.suggestion-image {
+  border-top-left-radius: 1.0em;
+  border-bottom-left-radius: 1.0em;
+  padding: 0;
+}
+
+.track-info {
+  position: relative;
+  overflow: hidden;
+}
+
+.additional-info {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
 }
 
 /* Edit buttons color on hover */
